--- a/CSS/cadastrar.css
+++ b/CSS/cadastrar.css
@@ -4,6 +4,7 @@ body{
 p{
     margin-block-end: 0;
     font-size: 10px;
+    margin-left: 7%;
 }
 .caixaBT{
     width:100%;
@@ -17,24 +18,33 @@ p{
 }
 input[type="text"],[type="password"],[type="number"]{
     font-size: 16px;
-    width: 100%;
-    padding-top: 4px;
-    padding-bottom: 4px;
+    width: 83%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    /*margin:0.5%;*/
+    margin-right: 10%;
+    margin-left: 7%;
+    border-radius: 6px;
+    border:1px solid;
 }
+input[type="radio"]{
+    margin-left: 7%;
+}
+
 input[type="submit"]{
     font-size: 18px;
     width: 50%;
     padding-top: 5px;
     padding-bottom: 5px;
     margin-left: 25%;
-    background-color: #66ccff;
+    background-color: #1a73e8;
+    border-style: groove;
+    margin-bottom: 5%;
 }
 .oculto{
     display: none;
 }
-fieldset{
-    background-color: #f2f2f2
-}
+
 button{
     font-size: 20px;
     margin-right: 20px;
@@ -46,7 +56,18 @@ button:active , button:focus{
 }
 input[type="text"].outro{
     width:50%;
+    margin-left: 0;
 }.Erro{
     font-size: 13px;
     color: red;
+}#pessoa, #sala, #adm{
+    background-color: #f2f2f2;
+    margin:0;
+    padding: 2%;
+    border: 1px solid;
+    border-radius: 50px;
+
+}p.tsala{
+    font-size: 15px;
+    font-weight: bold;
 }
