--- a/CSS/cadastrar.css
+++ b/CSS/cadastrar.css
@@ -1,6 +1,3 @@
-body{
-    font-size: 14px;
-}
 p{
     margin-block-end: 0;
     font-size: 10px;
@@ -24,8 +21,9 @@ input[type="text"],[type="password"],[type="number"]{
     /*margin:0.5%;*/
     margin-right: 10%;
     margin-left: 7%;
-    border-radius: 6px;
+    border-radius: 10px;
     border:1px solid;
+    border-color: #383838;
 }
 input[type="radio"]{
     margin-left: 7%;
@@ -33,13 +31,29 @@ input[type="radio"]{
 
 input[type="submit"]{
     font-size: 18px;
-    width: 50%;
+    width: 40%;
     padding-top: 5px;
     padding-bottom: 5px;
-    margin-left: 25%;
+    margin-left: 30%;
     background-color: #1a73e8;
+    color: white;
     border-style: groove;
     margin-bottom: 5%;
+    border: 1px solid#1a73e8;
+    border-radius: 10px;
+}
+input[type="submit"]:focus{
+    outline: none;
+}input[type="submit"]:active:hover {
+    background:#104fa2 ;
+    box-shadow: 0 1px 10px 0px #666666; 
+}input[type="submit"]:active {
+    background:#104fa2 ;
+    box-shadow: 0 1px 10px 0px #666666; 
+}
+input[type="submit"]:hover{
+    background:#1566d1 ;
+    box-shadow: 0 1px 10px 0px #999999;
 }
 .oculto{
     display: none;
@@ -49,9 +63,19 @@ button{
     font-size: 20px;
     margin-right: 20px;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 30px;
+    font-weight: 700;
+    background-color:#ffffff;
+    border: none;
+    box-shadow: 0 0px 10px  #1a1a1a;
 }
-button:active , button:focus{
+button:active:hover{
+    box-shadow: 0 2px 10px 5px #8e968f;
+}
+button:hover{
+    background-color: #e6e6e6;
+}
+button:focus{
     outline: none;
 }
 input[type="text"].outro{
@@ -64,10 +88,13 @@ input[type="text"].outro{
     background-color: #f2f2f2;
     margin:0;
     padding: 2%;
-    border: 1px solid;
-    border-radius: 50px;
+    border: 1px solid #ccc;
+    border-radius: 25px;
 
 }p.tsala{
     font-size: 15px;
     font-weight: bold;
+}
+input:focus{
+    outline: none;
 }
