--- a/CSS/main.css
+++ b/CSS/main.css
@@ -12,6 +12,7 @@ h2.titulo{
     width: 250px;
     padding-left: 30px;
     float:left;
+    height: 28px;
 }
 a.paginas{
     margin-top: 19.920px;
@@ -22,16 +23,16 @@ a.paginas{
     float:right;
     font-size: 1.3em;
 }
-
-a.paginas:active{color:crimson;}
-
+a.paginas:active{color:crimson;
+}
 main{width: 100%;
-    float: left;}
-    
+    float: left;
+}
 table{margin: auto;
-    margin-top: 1%;}
+    margin-top: 1%;
+}
 table,tr,th,td{
-    padding:5px 20px 5px 20px;
+    padding:0px 20px 0px 20px;
     border: 1px solid black;
     border-collapse: collapse;
     font-size: 1.04em;
@@ -39,12 +40,68 @@ table,tr,th,td{
 }
 th{
     background-color: white;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 button.btRecarregar{
     margin-left: 40%;
     margin-right: 40%;
     margin-top: 1%;
     width: 20%;
-    height: 30px;
+    height: 40px;
     font-size: 1.25em;
+    border-radius: 30px;
+    /*padding-top: 5px;
+    padding-bottom: 5px;*/
+    font-weight: 700;
+    background-color:#f2f2f2;
+    border: 1px solid #0d0d0d;
+    border-right:4px solid #0d0d0d;
+    border-bottom:3px solid #0d0d0d;
+    
+    /*border-bottom:3px solid #bfbfbf;
+    border-right:3px solid #bfbfbf;*/
+}.btRecarregar:active.btRecarregar:hover{
+    border: 1px solid #0d0d0d;
+    border-top:3px solid #0d0d0d;
+    border-left:4px solid #0d0d0d;
+    /*border-left:3px solid #bfbfbf;
+    border-top:3px solid #bfbfbf;*/
+}
+button.btRecarregar:hover{
+    background-color: #e6e6e6;
+    /*border-right: 3px solid #a6a6a6;
+    border-bottom: 3px solid #a6a6a6;
+    border-left: 3px solid #bfbfbf;
+    border-top: 3px solid#bfbfbf;*/
+}button.btRecarregar:focus{
+    outline: none;
+}
+.btTabela{
+    height: 30px;
+    margin: 0;
+    width: 100%;
+    border:0;
+    border-bottom: 3px solid #bfbfbf;
+    border-right:3px solid #bfbfbf;
+    text-transform: uppercase;
+    /*font-weight: 700;*/
+    font-size: 0.80em;
+    cursor: pointer;
+    background-color:#f2f2f2
+    
+}.btTabela:focus{
+    outline: none;
+}
+.btTabela:active.btTabela:hover{
+    position: relative;
+    border:0;
+    border-left: 3px solid #a6a6a6;
+    border-top: 3px solid #a6a6a6;
+
+}
+.btTabela:hover{
+    background-color: #e6e6e6;
+    border-right: 3px solid #a6a6a6;
+    border-bottom: 3px solid #a6a6a6;
 }
